# ficaria

./: .coverage  .gitignore  LICENSE  README.md  ficaria_showcase.ipynb  pyproject.toml  requirements.txt
data/: data_example.py
experiments/: MI.ipynb  MI_frac__missing.ipynb  visualization.ipynb
ficaria/: __init__.py  as.ipynb  feature_selection.py  missing_imputation.py  utils.py
tests/: article_experiment_reconstruction_AK.ipynb  test_example.py  test_feature_selection.py  test_missing_imputation.py  test_notebook_AK.ipynb  test_notebook_BO.ipynb  test_utils.py  test_utils_FC.py  test_utils_KI.py  test_utils_fcmkii.py
tests/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
tests/catboost_info/learn/: events.out.tfevents
