[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ficaria"
version = "0.1.0"
description = "Feature selection and missing data imputation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aleksandra Kwiatkowska", email = "email@example.com" },
    { name = "Małgorzata Mokwa", email = "email@example.com" },
    { name = "Bogumiła Okrojek", email = "email@example.com" }
]

license-files = ["LICENSE"]

urls = { "Homepage" = "https://github.com/szostkawron/ficaria", "Repository" = "https://github.com/szostkawron/ficaria" }

keywords = ["feature selection", "missing data", "imputation", "machine learning", "scikit-learn"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
    "kneed>=0.8.5",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["."]



